# llm-sustainability-analysis

./: .gitignore  .~lock.Uebersicht_Modelle_Portfolio.ods#  README.md  Uebersicht_Modelle_Portfolio.ods  folder-structure  main.py  pyproject.toml
02_notebooks/: 01_data_cleaning_filtering.ipynb  02_feature_engineering.ipynb  02_feature_target.ipynb  02_feature_target_engineering.ipynb  03_data_exploration.ipynb  04_clustering_usage_patterns.ipynb  04_efficiency_modelling.ipynb  04b_clustering_usage_patterns.ipynb  05_efficiency_modeling.ipynb  0A_data_cleaning_filtering.ipynb  0B_feature_target.ipynb  0C_data_exploration.ipynb  0E_efficiency_modelling.ipynb
03_src/: 01_data_processing.py
