[project]
name = "llm-sustainability-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "langdetect>=1.0.9",
    "matplotlib>=3.10.8",
    "nltk>=3.9.4",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.5.0",
    "spacy>=3.8.14",
    "tiktoken>=0.13.0",
]
